--- a/gb/23/1/6/n13901106.md
+++ b/gb/23/1/6/n13901106.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>卡城发记肉店市中心店搬至Sunridge商业区</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/01/id13901331-20200106-YiRan-Fat-Kee-BBQ-Meat-02-600x400.jpg" />
 <h6>卡城发记肉店。（义然／大纪元）
@@ -9,12 +9,12 @@
 <p>【大纪元2023年01月07日讯】2022年12月17日，卡尔加里Sunridge商业区的发记肉食公司（Fat Kee BBQ &amp; Meat）锣鼓沸腾，店家正在庆祝新店址开张。</p>
 <p>这是一家来自卡城市中心唐人街、拥有30多年历史的老字号华人肉铺。赶在圣诞节前，商家办完了各种手续，终于搬出交通拥挤的市中心，成功落户新店址。</p>
 <p>对许多市中心的老人家来说，听闻发记搬迁新址，大家都恋恋不舍。毕竟这个多年位于唐人街汇丰商城底楼的肉店，对附近的居民而言，不仅方便，最主要的是物美价廉。孙奶奶住汇丰商城对面，她所有的肉都是从发记买。她说：“这家店的猪脚、猪舌、猪心、猪肺都是我全家最喜欢的。”</p>
-<figure id="attachment_13901337" aria-describedby="caption-attachment-13901337" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13901337-20200106-YiRan-Fat-Kee-BBQ-Meat-04.jpg"><img class="size-large wp-image-13901337" src="https://i.epochtimes.com/assets/uploads/2023/01/id13901337-20200106-YiRan-Fat-Kee-BBQ-Meat-04-600x338.jpg" alt="卡城发记肉店" width="600" b="338" /></a><figcaption id="caption-attachment-13901337" class="wp-caption-text">卡城<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%91%E8%AE%B0%E8%82%89%E5%BA%97.md#1">发记肉店</a>。（义然／大纪元）</figcaption></figure>
-<p>该店的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%82%89%E5%93%81.md#1">肉品</a>门类丰富、品种齐全。有深受华人喜爱的猪、牛内脏，如舌、肚、脚、肝、肾、肠等。李女士喜欢这家肉店，虽然从家到发记要开车25分钟，但她过几周就特地赶来买肉。她比较过多家肉店，觉得：“这家店的价格算全城最低的了，重要的是肉非常新鲜。我非常喜欢这家的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8A%E8%82%89%E7%89%87.md#1">羊肉片</a><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%B6%AE%E7%81%AB%E9%94%85.md#1">涮火锅</a>。”</p>
-<figure id="attachment_13901339" aria-describedby="caption-attachment-13901339" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13901339-20200106-YiRan-Fat-Kee-BBQ-Meat-03.jpg"><img class="size-large wp-image-13901339" src="https://i.epochtimes.com/assets/uploads/2023/01/id13901339-20200106-YiRan-Fat-Kee-BBQ-Meat-03-600x342.jpg" alt="卡城发记肉店" width="600" b="342" /></a><figcaption id="caption-attachment-13901339" class="wp-caption-text">卡城<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8F%91%E8%AE%B0%E8%82%89%E5%BA%97.md#1">发记肉店</a>。（义然／大纪元）</figcaption></figure>
+<figure id="attachment_13901337" aria-describedby="caption-attachment-13901337" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13901337-20200106-YiRan-Fat-Kee-BBQ-Meat-04.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13901337" src="https://i.epochtimes.com/assets/uploads/2023/01/id13901337-20200106-YiRan-Fat-Kee-BBQ-Meat-04-600x338.jpg" alt="卡城发记肉店" width="600" b="338" /></a><figcaption id="caption-attachment-13901337" class="wp-caption-text">卡城发记肉店。（义然／大纪元）</figcaption></figure>
+<p>该店的肉品门类丰富、品种齐全。有深受华人喜爱的猪、牛内脏，如舌、肚、脚、肝、肾、肠等。李女士喜欢这家肉店，虽然从家到发记要开车25分钟，但她过几周就特地赶来买肉。她比较过多家肉店，觉得：“这家店的价格算全城最低的了，重要的是肉非常新鲜。我非常喜欢这家的羊肉片涮火锅。”</p>
+<figure id="attachment_13901339" aria-describedby="caption-attachment-13901339" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13901339-20200106-YiRan-Fat-Kee-BBQ-Meat-03.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13901339" src="https://i.epochtimes.com/assets/uploads/2023/01/id13901339-20200106-YiRan-Fat-Kee-BBQ-Meat-03-600x342.jpg" alt="卡城发记肉店" width="600" b="342" /></a><figcaption id="caption-attachment-13901339" class="wp-caption-text">卡城发记肉店。（义然／大纪元）</figcaption></figure>
 <p>对许多需要远道而来的家庭和饭店来说，发记搬到新的店址，他们都感到高兴。冯先生是城西北一饭店老板，也是发记的老客户，他说：“新店址对我很方便。我喜欢这家的肉，但从前在市中心取货，停车总是大问题，不小心可能还吃罚单。现在不仅交通、停车方便，而且位于繁华的Sunridge商业区，附近有很多方便的商家，顺路可办很多事。”</p>
-<p>发记有自己的杀猪场，提供猪肉的批发、零售，因此价格在肉店同行中很有优势。所提供的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%82%89%E5%93%81.md#1">肉品</a>不仅质量稳定，且肉质鲜美。另外还提供牛、羊、鸡、鸭、禽、蛋一应俱全的肉食。</p>
-<figure id="attachment_13901340" aria-describedby="caption-attachment-13901340" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13901340-20200106-YiRan-Fat-Kee-BBQ-Meat-01.jpg"><img class="size-large wp-image-13901340" src="https://i.epochtimes.com/assets/uploads/2023/01/id13901340-20200106-YiRan-Fat-Kee-BBQ-Meat-01-600x380.jpg" alt="卡城发记肉店" width="600" b="380" /></a><figcaption id="caption-attachment-13901340" class="wp-caption-text">卡城发记肉店。（义然／大纪元）</figcaption></figure>
+<p>发记有自己的杀猪场，提供猪肉的批发、零售，因此价格在肉店同行中很有优势。所提供的肉品不仅质量稳定，且肉质鲜美。另外还提供牛、羊、鸡、鸭、禽、蛋一应俱全的肉食。</p>
+<figure id="attachment_13901340" aria-describedby="caption-attachment-13901340" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/01/id13901340-20200106-YiRan-Fat-Kee-BBQ-Meat-01.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-13901340" src="https://i.epochtimes.com/assets/uploads/2023/01/id13901340-20200106-YiRan-Fat-Kee-BBQ-Meat-01-600x380.jpg" alt="卡城发记肉店" width="600" b="380" /></a><figcaption id="caption-attachment-13901340" class="wp-caption-text">卡城发记肉店。（义然／大纪元）</figcaption></figure>
 <p>新店开张，又逢圣诞、新年佳节，发记肉食公司提供非常丰富的肉品，每款肉的价格都令人惊喜。店主陈老板热忱欢迎新老客户光临新店址，希望发记成为大家生活中不可或缺的部分。</p>
 <p>发记肉食公司（<span style="color: #0000ff;"><a style="color: #0000ff;" href="https://www.google.com/search?rlz=1C1SQJL_enCA910CA910&amp;sxsrf=ALiCzsaUJOQb_4IZEpSqe-tOpgKZ2r3_lQ:1671421094101&amp;q=Fat+Kee+Fresh+Meat+and+BBQ+Calgary&amp;si=AC1wQDCb48pJOhjniU-CPpWXcWQCAuOVlcIjSvs_FGbLklR5dspknFfl2GKzzw0jlqLdh16lGbz292btO9M4IlL6hinBK2FaYtz6Khzb8rWs5iufpfhOt1AJ1xbTi7rIKb0PcsM8IY8GXKnSu5ZlvSrq-D44jX7_HT3Krzw7wUzgegdKOu0fa2U05p_b6gA4oXNiG4UZqUQA&amp;sa=X&amp;ved=2ahUKEwj3wNXk4IT8AhXOBzQIHUn6DTIQ6RN6BAgQEAE&amp;biw=1066&amp;bih=520&amp;dpr=1.5" target="_blank" rel="noopener noreferrer">Fat Kee BBQ and Meat</a></span>）<br />
 新店址：2255 32 St NE #5106, Calgary, AB T1Y 6E8<br />
@@ -22,49 +22,42 @@
 营业时间：7天营业，9:00AM-6:00PM</p>
 <p>（本文系工商报导，相关资讯由商家提供，不代表本报社观点。）</p>
 <p>责任编辑：齐守善</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/8/6/n2987471.md#1">小小中餐馆展现华人百年创业史</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/16/4/18/n7567978.md#1">10大加拿大美味小吃 总有一款迷倒你</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/3/17/n13651847.md#1">小赌城的吃货天堂</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/1/n13750373.md#1">加拿大最佳100家餐厅 ?卡尔加里占11家</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/9/28/n13834811.md#1">首创姜汁牛肉条 卡城银楼京菜馆关门</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/21/n13977924.md#1">鹰翅之下 与美食相遇</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/7/13/n13779653.md#1">牛仔节手记：9大经典饮食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/8/6/n2987471.md#1">小小中餐馆展现华人百年创业史</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/4/18/n7567978.md#1">10大加拿大美味小吃 总有一款迷倒你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/17/n13651847.md#1">小赌城的吃货天堂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/1/n13750373.md#1">加拿大最佳100家餐厅 ?卡尔加里占11家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/9/28/n13834811.md#1">首创姜汁牛肉条 卡城银楼京菜馆关门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14307861.md#1">Ryan’s Meat瑞恩肉店：卡城香肠的翘楚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/14/n14250310.md#1">2024年加拿大百佳餐馆名单公布</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/2/21/n14185511.md#1">卡城排名前10的亚洲餐厅</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/8/n14049894.md#1">卡城哪里卖上好的日本和牛？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/7/n14049208.md#1">找寻卡城好肉店</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/3/n11564392.md#1" target="_blank">凌晓辉：当代人类的天书（一）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/8/4/26/n2096078.md#1" target="_blank">载入史册的一幕 中南海万人上访</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/10/7/28/n2978870.md#1" target="_blank">鲜为人知的马克思之八：魔性的马克思</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/20/n10729835.md#1" target="_blank">权威学者：侵犯宗教自由 中共被点名最多</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973563.md#1">【未解之谜】血型中的创世之谜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976615.md#1">【未解之谜】这条河干涸了 末日就会到来？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13971175.md#1">【天道有知】天知道！改邪归正为何儿子反遭祸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973650.md#1">关公托梦的神迹  改写命运的对联</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973255.md#1">从彼得兔到兔儿爷，一路陪伴，危难救助</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976643.md#1">【百年真相】拒当背锅侠 陈独秀杠上斯大林</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/20/n13977732.md#1">【环球直击】违反制裁向华为出口硬盘 希捷被罚3亿</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/20/n13977727.md#1">【时事金扫描】马斯克星舰爆炸 史上最喜庆失败</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976663.md#1">余茂春：攻台将只是中共一连串侵略的开始</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/15/n13973790.md#1">王维洛：北京为何设定2025年战略储水目标</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976215.md#1">【中国观察】“农管”闹剧登场 惹民怨</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975905.md#1">分享邓超与女儿相处趣事 孙俪：这爸爸真可以</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976737.md#1">明道惊喜宣布老婆怀二胎 宝宝性别曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976767.md#1">周润发跑步新造型抢镜 吴君如跟跑直喊紧张</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975985.md#1">吴镇宇6次错失金像影帝 儿子发文调侃引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976697.md#1">周星驰晒与五月天合照 秀绝技自荐组六月天</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975003.md#1">3种自然疗法抗过敏 疗效强大堪比激素药</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/17/n13975017.md#1">研究：新型Omega-3油有望改善糖尿病眼部病变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975570.md#1">飞行员透露 乘客在登机时经常犯这个错误</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/18/n13975851.md#1">加州野花漫山盛开 赏花热点报你知</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/19/n13976161.md#1">研究：使用滑鼠的方式会反映你的工作压力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/2/n14303783.md#1">【未解之谜】美国日全食开启灾难之门 比格斯预言盘点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304300.md#1">历史上那些“退”的智慧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300489.md#1">“别人”做的饭菜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/4/n14304683.md#1">【未解之谜】灵异阿拉斯加 黑暗金字塔的秘密</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302520.md#1">【古道人生】康熙年间关帝显灵 大败贼寇的真实记载</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14307461.md#1">【时事金扫描】伊朗下战书 以色列却甩出一张图</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306767.md#1">【晚间新闻】大陆网民热议孟加拉政变 中共忙封号</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/8/n14306935.md#1">【新闻欣视角】新冠病毒警报再响 两变异株来势汹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306092.md#1">华人餐桌的美味 蓝蟹为何令意大利政府头疼</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305720.md#1">【更新】2024年巴黎奥运奖牌榜 8月6日</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306005.md#1">奥运挺美惹祸 国家体育总局官员袁昊然遭调查</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306143.md#1">《死侍与金钢狼》票房惊人 席琳·狄翁逗趣恭喜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306851.md#1">周星驰拍片曾资金不足 富豪出手只为演个角色</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/5/n14305321.md#1">陈思诚新片《解密》票房遇冷 估计至少亏3亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306732.md#1">章子怡带儿女出游 炎炎夏日陪玩全身包裹严实</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14306062.md#1">徐峥新片《逆行人生》遭一影院抵制 引热议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305693.md#1">飞机快起飞了还在排安检怎么办？旅游达人提2方法</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/7/n14306209.md#1">营养师推荐一传统小吃 钙含量高豆浆25倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/6/n14305481.md#1">补充水分小心喝下细菌毒素 这4种水不要喝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302749.md#1">肾功能不及格的10大征兆 多注意可预防洗肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/29/n14300518.md#1">超级保健卫士：黑蒜? 壮体 抗癌</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/6/n13901106.htm">卡城发记肉店市中心店搬至Sunridge商业区</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901106.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/6/n13901106.htm">卡城发记肉店市中心店搬至Sunridge商业区</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/1/6/n13901106.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
